--- a/client/src/CSS/scss_partials/home/_home.scss
+++ b/client/src/CSS/scss_partials/home/_home.scss
@@ -6,5 +6,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	background-color: v.$mode-background-color-home-light;
+	height: 100%;
 	width: 100%;
 }
