--- a/client/src/CSS/scss_partials/authentication/_registerLogin.scss
+++ b/client/src/CSS/scss_partials/authentication/_registerLogin.scss
@@ -61,10 +61,10 @@
 		margin-top: v.$register-login-form-input-margin-top;
 		margin-bottom: v.$register-login-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid gray;
+		border: v.$form-input-text-base-border-width solid v.$mode-border-color-base-form-input-light;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
-		background: v.$light-gray-level-5;
+		background: v.$mode-background-color-base-form-input-light;
 		padding: 8px;
 		width: 100%;
 		font-size: 14px;
@@ -89,7 +89,7 @@
 		outline: none;
 		border: 0;
 		border-radius: v.$base-buttton-border-radius;
-		background-color: v.$light-blue-teal;
+		background-color: v.$light-teal;
 		padding: 10px;
 		width: 100%;
 		color: white;
@@ -98,7 +98,7 @@
 
 		&:hover,
 		&:active {
-			background-color: v.$dark-blue-teal;
+			background-color: v.$dark-teal;
 		}
 	}
 
