--- a/client/src/CSS/scss_partials/basic/_toggleSwitch.scss
+++ b/client/src/CSS/scss_partials/basic/_toggleSwitch.scss
@@ -23,8 +23,8 @@
 	}
 
 	.toggle-switch--dark-mode {
-		border-color: v.$dark-gray-level-2;
-		background-color: v.$dark-gray-level-2;
+		border-color: v.$gray-level-4;
+		background-color: v.$gray-level-4;
 	}
 
 	.toggle-switch--off {
@@ -46,7 +46,7 @@
 		// Resets left
 		left: auto;
 		right: 3px;
-		color: v.$dark-gray-level-1;
+		color: v.$gray-level-3;
 	}
 
 	.toggle-switch__circle {
