--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -63,10 +63,10 @@
 		margin-top: v.$edit-account-form-input-margin-top;
 		margin-bottom: v.$edit-account-create-item-form-input-margin-bottom;
 		outline: none;
-		border: v.$form-input-text-base-border-width solid gray;
+		border: v.$form-input-text-base-border-width solid v.$mode-border-color-base-form-input-light;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
-		background: v.$light-gray-level-5;
+		background: v.$mode-background-color-base-form-input-light;
 		padding: 8px;
 		width: 100%;
 		font-size: 14px;
