--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
@@ -15,7 +15,7 @@
 	.name-centering-container__form-name-input {
 		@include m.dead-center;
 		border: v.$edit-item-name-input-border-width solid black;
-		border-right: v.$edit-item-name-input-border-width dotted v.$gray-level-2;
+		border-right: v.$edit-item-name-input-border-width dotted v.$light-gray-level-10;
 		border-radius: v.$form-input-border-radius 0 0 v.$form-input-border-radius;
 		background-color: white;
 		padding: v.$edit-item-name-input-padding;
@@ -171,13 +171,13 @@
 	// These classes are used by the custom hook that handles appearance
 	// ...of completion date based of the status of the project
 	.grayed-out-unclickable-label {
-		color: v.$gray-level-2;
+		color: v.$light-gray-level-10;
 		pointer-events: none;
 	}
 
 	.grayed-out-unclickable-date {
 		background-color: v.$light-gray-level-5;
-		color: v.$gray-level-2;
+		color: v.$light-gray-level-10;
 		pointer-events: none;
 	}
 
