--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -9,24 +9,34 @@ $light-gray-level-4: #ebebeb;
 $light-gray-level-5: #e5e5e5;
 $light-gray-level-6: #e1e1e1;
 $light-gray-level-7: #dddddd;
-$gray-level-1: #d6d6d6;
-$gray-level-2: #bfbfbf;
-$gray-level-3: #b1b1b1;
-$gray-level-4: #a3a3a3;
-$gray-level-5: #919191;
-$dark-gray-level-1: #808080;
-$dark-gray-level-2: #757575;
-$dark-gray-level-3: #4e4e4e;
-$dark-gray-level-4: #3a3a3a;
+$light-gray-level-8: #d6d6d6;
+$light-gray-level-9: #cacaca;
+$light-gray-level-10: #bfbfbf;
+$light-gray-level-11: #b1b1b1;
+$gray-level-1: #a3a3a3;
+$gray-level-2: #919191;
+$gray-level-3: #808080;
+$gray-level-4: #757575;
+$gray-level-5: #6d6d6d;
+$gray-level-6: #636363;
+$gray-level-7: #5e5e5e;
+$gray-level-8: #555555;
+$gray-level-9: #525252;
+$gray-level-10: #505050;
+$dark-gray-level-1: #4e4e4e;
+$dark-gray-level-2: #3a3a3a;
+$dark-gray-level-3: #363636;
+$dark-gray-level-4: #333333;
+$dark-gray-level-5: #303030;
+$dark-gray-level-6: #292929;
+$dark-gray-level-7: #272727;
+$dark-gray-level-8: #1d1d1d;
+$dark-gray-level-9: #181818;
 // Blue grays
 $very-light-blue-gray: #7390af;
 $light-blue-gray: #607c99;
 $blue-gray: #50677f;
 $dark-blue-gray: #215792;
-// Blue teals
-$light-blue-teal: #8ba8b3;
-$blue-teal: #6691a3;
-$dark-blue-teal: #50798b;
 // Navy blues
 $lighter-navy-blue: #4d6e92;
 $light-navy-blue: #4d6b8b;
@@ -35,12 +45,10 @@ $darker-navy-blue: #3d5774;
 // Basic blues
 $light-blue: #76bffa;
 $blue: #3889cc;
-//Text
-$blue-text: #245ba3;
-$teal-text: #2588b3;
-// Links
-$blues-link: #005ed8;
-$red-link: #f34242;
+// Teals
+$light-teal: #8ba8b3;
+$teal: #6691a3;
+$dark-teal: #50798b;
 // Reds
 $light-red: #cf8c8c;
 $bright-red: #fc1e1e;
@@ -50,27 +58,7 @@ $darker-red: #cc4c4c;
 $light-green: #ccf5cc;
 // Yellows
 $yellow: #ffff00;
-// Components
-$basic-toggle-switch-on-color: $blue;
-$basic-toggle-switch-off-color: $light-gray-level-7;
-$account-sidebar-appearance-theme-button-border-color: $dark-gray-level-3;
-$account-sidebar-appearance-theme-button-background-color: $light-gray-level-5;
-$account-sidebar-appearance-theme-button-arrow-container-color: $gray-level-2;
-$account-sidebar-appearance-theme-button-option-text-color: $dark-gray-level-4;
-$account-sidebar-appearance-theme-button-option-selected-color: $light-blue;
-$search-filter-sort-bar-color: $light-gray-level-5;
-$list-tale-border-color: $gray-level-5;
-$list-table-background-color: white;
-$filter-active-color: #0077ff;
-$filter-active-color2: #ae00ff;
-$filter-active-color3: #ffbb00;
-// Status colors
-$status-gray: $dark-gray-level-1;
-$status-blue: #568dd5;
-$status-purple: #9680ce;
-$status-orange: #ff9900;
-$status-green: #007e00;
-$status-red: #d14242;
+
 // Backend error color
 $backend-error-color: red;
 // Blurred background color
@@ -78,9 +66,59 @@ $blurred-background-color: black;
 // Focus colors
 $focus-blue: #0059ff;
 // Icon button colors
-$normal-icon-button-gray: $gray-level-5;
-$darker-icon-button-gray: $dark-gray-level-2;
-$hover-active-icon-button-gray: $dark-gray-level-4;
+$normal-icon-button-gray: $gray-level-2;
+$darker-icon-button-gray: $gray-level-4;
+$hover-active-icon-button-gray: $dark-gray-level-2;
+// Links
+$blues-link: #005ed8;
+$red-link: #f34242;
+
+// Components (General)
+$basic-toggle-switch-on-color: $blue;
+$basic-toggle-switch-off-color: $light-gray-level-7;
+$account-sidebar-appearance-theme-button-border-color: $dark-gray-level-1;
+$account-sidebar-appearance-theme-button-background-color: $light-gray-level-5;
+$account-sidebar-appearance-theme-button-arrow-container-color: $light-gray-level-10;
+$account-sidebar-appearance-theme-button-option-text-color: $dark-gray-level-2;
+$account-sidebar-appearance-theme-button-option-selected-color: $light-blue;
+$list-table-border-color: $gray-level-2;
+$filter-active-color: #0077ff;
+$filter-active-color2: #ae00ff;
+$filter-active-color3: #ffbb00;
+// Dark/Light mode (general)
+$mode-text-color-base-dark: $light-gray-level-9; // dark in name refers to the mode (not the text color)
+$mode-text-color-base-light: black; // light in name refers to the mode (not the text color)
+$mode-text-color-base-disabled-form-input-dark: $gray-level-5;
+$mode-text-color-base-disabled-form-input-light: $light-gray-level-10;
+// Dark/Light mode (specific)
+$mode-background-color-home-dark: $dark-gray-level-4;
+$mode-background-color-home-light: white;
+$mode-background-color-search-filter-sort-top-bar-dark: $dark-gray-level-6;
+$mode-background-color-search-filter-sort-top-bar-light: $light-gray-level-5;
+$mode-background-color-create-item-sidebar-dark: $mode-background-color-home-dark;
+$mode-background-color-create-item-sidebar-light: $mode-background-color-home-light;
+$mode-background-color-base-form-input-dark: $gray-level-9;
+$mode-background-color-base-form-input-light: $light-gray-level-5;
+$mode-border-color-base-form-input-dark: $dark-gray-level-8;
+$mode-border-color-base-form-input-light: $gray-level-4;
+$mode-background-color-base-disabled-form-input-dark: $mode-background-color-create-item-sidebar-dark;
+$mode-background-color-base-disabled-form-input-light: $mode-background-color-create-item-sidebar-light;
+$mode-background-color-item-view-item-box-dark: $dark-gray-level-6;
+$mode-background-color-item-view-item-box-light: $light-gray-level-5;
+// Themes
+$theme-background-color-teal-dark: $dark-teal;
+$theme-background-color-teal-light: $teal;
+$theme-text-color-teal: #2588b3;
+$theme-background-color-blue-dark: $darker-navy-blue;
+$theme-background-color-blue-light: $lighter-navy-blue;
+$theme-text-color-blue: #245ba3;
+// Status colors
+$status-gray: $gray-level-3;
+$status-blue: #568dd5;
+$status-purple: #9680ce;
+$status-orange: #ff9900;
+$status-green: #007e00;
+$status-red: #d14242;
 
 //==========
 // Heights
